--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="label_ShortResume">Breve Currículo</string>
     <string name="label_ProfessionalExperience">Experiência Profissional</string>
     <string name="label_RegisterBtn">Registrar</string>
+    <string name="label_ForgotBtn">Esqueci minha senha</string>
+    <string name="label_Cadastro">Cadastro</string>
 
 </resources>
