Tela de cadastro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="label_RegisterBtn">Registrar</string>
     <string name="label_ForgotBtn">Esqueci minha senha</string>
     <string name="label_Cadastro">Cadastro</string>
+    <string name="label_Cadastrar">Cadastrar</string>
+    <string name="label_ConfirPass">Confirme a senha</string>
 
 </resources>
