--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,15 @@
     <string name="label_ForgotBtn">Esqueci minha senha</string>
     <string name="label_Singup">Cadastro</string>
     <string name="label_Signup2">Cadastrar</string>
+    <string name="action_settings">Settings</string>
+
+    //strings para navegacao
+    <string name="info_fragment_label">Info</string>
+    <string name="login_fragment_label">Login</string>
+    <string name="signup_fragment_label">Sign Up</string>
+    <string name="notifications_are_disabled_fragment_label">Notificações desabilitadas</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
